# tailor-resumes

./: README.md  pyproject.toml  resume.md
src/tailor_resume/: crew.py  main.py
src/tailor_resume/config/: agents.yaml  tasks.yaml
